CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED on)
SET(CMAKE_CXX_EXTENSIONS OFF)
PROJECT("epoll_server")
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)
FILE(GLOB_RECURSE SRC_FILE
${CMAKE_SOURCE_DIR}/src/*.cpp
${CMAKE_SOURCE_DIR}/src/*.c
)
ADD_EXECUTABLE(${CMAKE_PROJECT_NAME} main.cpp ${SRC_FILE})
